--- a/style/style.scss
+++ b/style/style.scss
@@ -1,5 +1,6 @@
 @import "generales";
 @import "botones";
+@import "fondos";
 
 /*animaciones*/
 
@@ -10,3 +11,4 @@
     transition-property: all;
     transition-duration: 0.5s;
 }
+
