--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,20 +7,28 @@ body {
   background-color: white;
 }
 
+.hr {
+  color: rgb(104, 22, 129);
+}
+
 .btn {
-  color: rgb(206, 64, 187);
+  color: rgb(104, 22, 129);
   background-color: white;
 }
 
 .badge {
   color: white;
-  background-color: rgb(206, 64, 187);
+  background-color: rgb(104, 22, 129);
 }
 
 .btn:hover {
   transition: background-color 0.5s ease;
-  background-color: rgb(206, 64, 187);
+  background-color: rgb(178, 108, 199);
   color: white;
+}
+
+.bg-color {
+  background-image: linear-gradient(rgb(104, 22, 129), white);
 }
 
 /*animaciones*/
