--- a/style/_generales.scss
+++ b/style/_generales.scss
@@ -6,5 +6,9 @@ body{
     background-color: white;
 } 
 .hr{
-    color: rgb(104, 22, 129);
+    border: 0;
+    height: 2px;
+    background-image: linear-gradient(to right, white, rgba(150, 34, 165, 0.75), white);
 }
+
+
