--- a/style/_secciones.scss
+++ b/style/_secciones.scss
@@ -2,3 +2,6 @@
     background-image: linear-gradient(to right, white, rgba(143, 26, 167, 0.75), white);
     color: white;
 }
+.form-floating{
+   width: 20%;
+}
