--- a/style/style.scss
+++ b/style/style.scss
@@ -4,11 +4,9 @@
 
 /*animaciones*/
 
+
 .card:hover{
-    transform: scale(1.1)
-}
-.card:hover{
+    transform: scale(1.1);
     transition-property: all;
     transition-duration: 0.5s;
 }
-
