--- a/style/_generales.scss
+++ b/style/_generales.scss
@@ -8,7 +8,7 @@ body{
 .hr{
     border: 0;
     height: 2px;
-    background-image: linear-gradient(to right, white, rgba(150, 34, 165, 0.75), white);
+    background-image: linear-gradient(to right, white, rgb(153, 69, 192), white);
 }
 
 
