--- a/estilos/style.css
+++ b/estilos/style.css
@@ -10,7 +10,7 @@ body {
 .hr {
   border: 0;
   height: 2px;
-  background-image: linear-gradient(to right, white, rgba(150, 34, 165, 0.75), white);
+  background-image: linear-gradient(to right, white, rgb(153, 69, 192), white);
 }
 
 .btn {
@@ -29,12 +29,22 @@ body {
 }
 
 .bg-color {
-  background-image: linear-gradient(to right, white, rgba(143, 26, 167, 0.75), white);
+  background-image: linear-gradient(to right, white, rgb(153, 69, 192), white);
   color: white;
 }
 
 .form-floating {
   width: 30%;
+}
+
+.bg-image {
+  background-image: url(../imgs/fondosnk.jpg);
+  width: 100%;
+}
+
+.bg-contacto {
+  background-color: rgba(4, 7, 7, 0.582);
+  color: white;
 }
 
 /*animaciones*/
