--- a/estilos/style.css
+++ b/estilos/style.css
@@ -39,12 +39,17 @@ body {
 
 .bg-image {
   background-image: url(../imgs/fondosnk.jpg);
-  width: 100%;
+  background-size: cover;
 }
 
 .bg-contacto {
   background-color: rgba(4, 7, 7, 0.582);
   color: white;
+}
+
+/*mapas*/
+.dat--contact {
+  color: rgb(214, 160, 221);
 }
 
 /*animaciones*/
