--- a/style/_botones.scss
+++ b/style/_botones.scss
@@ -1,14 +1,14 @@
 .btn{
-    color:rgb(104, 22, 129);
-    background-color: white;
+    color: $boton1;
+    background-color: $color2;
 
       &:hover{
          transition: background-color 0.5s ease;
-         background-color: rgb(178, 108, 199);
-         color: white;
+         background-color: $boton2;
+         color: $color2;
         }
 }
 .badge{
-    color: white;
-    background-color: rgb(104, 22, 129);
+    color: $color2;
+    background-color: $boton1;
 }
